--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,35 @@ spring:
     password: 1q2w3e4r~
 
 
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            clientId: 149133877222-8h4dun60bqr9gjceopr781vc8caqr211.apps.googleusercontent.com
+            clientSecret: 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
+            scope:
+              - email
+              - profile
+
+#          naver:
+#            clientId: Q9u3DJHR32_K2HTvHFSL
+#            clientSecret: hBdoavG1j7
+#            clientAuthenticationMethod: post
+#            authorizationGrantType: authorization_code
+#            redirectUri: http://127.0.0.1:8090/login/oauth2/code/naver
+#            scope:
+#              - name
+#              - email
+#            clientName: Naver
+#          provider:
+#            naver:
+#              authorizationUri: https://nid.naver.com/oauth2.0/authorize
+#              tokenUri: https://nid.naver.com/oauth2.0/token
+#              userInfoUri: https://openapi.naver.com/v1/nid/me
+#              userNameAttribute: response
+
+
 mybatis:
   mapper-locations:
     - /mappers/*.xml
