--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,22 +25,23 @@ spring:
               - email
               - profile
 
-#          naver:
-#            clientId: Q9u3DJHR32_K2HTvHFSL
-#            clientSecret: hBdoavG1j7
-#            clientAuthenticationMethod: post
-#            authorizationGrantType: authorization_code
-#            redirectUri: http://127.0.0.1:8090/login/oauth2/code/naver
-#            scope:
-#              - name
-#              - email
-#            clientName: Naver
-#          provider:
-#            naver:
-#              authorizationUri: https://nid.naver.com/oauth2.0/authorize
-#              tokenUri: https://nid.naver.com/oauth2.0/token
-#              userInfoUri: https://openapi.naver.com/v1/nid/me
-#              userNameAttribute: response
+          naver:
+            clientId: Q9u3DJHR32_K2HTvHFSL
+            clientSecret: hBdoavG1j7
+            scope:
+              - name
+              - email
+              - profile_image
+            clientName: Naver
+            authorizationGrantType: authorization_code
+            redirectUri: http://localhost:8090/login/oauth2/code/naver
+
+        provider:
+          naver:
+            authorizationUri: https://nid.naver.com/oauth2.0/authorize
+            tokenUri: https://nid.naver.com/oauth2.0/token
+            userInfoUri: https://openapi.naver.com/v1/nid/me
+            userNameAttribute: response
 
 
 mybatis:
